# agri-weather-yield-drivers

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  agri-weather-yield-drivers.code-workspace  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
binder/: postBuild
notebooks/: .gitignore  0-explore-data-sources.ipynb  1-nuts3-duckdb-data-lake.ipynb  2_1-eval-dwd-stations-nuts3.ipynb  README.md  eval-dwd-gridded.ipynb  eval-dwd-stations-nuts3.ipynb  eval-regionalstatistik-yields.ipynb  explore-data-sources.ipynb  nuts3-duckdb-data-lake.ipynb
scripts/: rename-notebooks.sh
