[project]
name = "agri-weather-yield-drivers"
version = "0.1.0"
description = "Explainable weather and soil drivers for yield risk signals"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

# TODO: add CLI entry points here when we have them:
# [project.scripts]
# agri-weather-yield-drivers = "agri_weather_yield_drivers.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = false # root as virtual package, just a workspace
default-groups = ["dev"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
src = [
    "packages/**/src",
    "packages/**/tests",
    "apps/*/*.py",
    "apps/**/src",
    "apps/**/tests",
]
extend-exclude = [".history"]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
files = ['.']
# files = [
#     "packages/**/src",
#     "packages/**/tests",
#     "apps/*/*.py",
# ]
python_version = "3.13"
# mypy_path = ["src"]
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "matplotlib.*"]
ignore_missing_imports = true